upload a picture from gallery camera settings

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -29,7 +29,7 @@
                 Take a picture
             </button>
             <div class="spacer"></div>
-            <button ion-button round outline color="dark">
+            <button ion-button round outline color="dark" on-click="askForPicture()">
                 Upload a picture
             </button>
         </div>
