Take a Picture rear camera preview

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -25,7 +25,7 @@
                 Laws Near You
             </button>
             <div class="spacer"></div>
-            <button ion-button round outline color="dark">
+            <button ion-button round outline color="dark" on-click="goToCamera()">
                 Take a picture
             </button>
             <div class="spacer"></div>
