--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -1,3 +1,11 @@
+<div id="custom-overlay" [style.display]="splash ? 'flex': 'none'">
+    <div class="flb">
+        <div class="Aligner-item Aligner-item--top"></div>
+        <h1 class="animation-target">LOGO HERE</h1>
+        <div class="Aligner-item Aligner-item--bottom"></div>
+    </div>
+</div>
+
 <ion-header>
     <ion-navbar>
         <ion-toolbar>
