--- a/client/src/pages/settings/settings.html
+++ b/client/src/pages/settings/settings.html
@@ -1,11 +1,18 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>
-      Settings
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            Settings
+        </ion-title>
+    </ion-navbar>
 </ion-header>
-<ion-content padding id="page3"></ion-content>
+<ion-content padding>
+    <ion-list>
+        <ion-item>
+            <ion-label>Toggle Night Mode</ion-label>
+            <ion-toggle (click)="toggleAppTheme()"></ion-toggle>
+        </ion-item>
+    </ion-list>
+</ion-content>
