--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -33,7 +33,7 @@
                 Browse
             </button>
             <div class="spacer"></div>
-            <button ion-button round outline color="dark">
+            <button ion-button round outline color="dark" on-click="goToLocation()">
                 Laws Near You
             </button>
             <div class="spacer"></div>
