--- a/client/src/pages/home_new/home.html
+++ b/client/src/pages/home_new/home.html
@@ -25,6 +25,18 @@
   </ion-navbar>
 </ion-header>
 <ion-content class="home" padding id="page1">
+    <ion-list id="division-list">
+      <ion-item color="none" on-click="goToTitle()" id="division-list-item16">
+        Division 1 - Government
+      </ion-item>
+      <ion-item color="none" id="division-list-item">
+        Division 2 - Business
+      </ion-item>
+      <ion-item color="none" id="division-list-item">
+        Division 3 - Property; Family
+      </ion-item>
+    </ion-list>
+  </ion-content>
   <form id="home-form">
     <div id="home-container" text-center>
       <ion-list id="menu-list">
