--- a/client/src/pages/statue/statue.html
+++ b/client/src/pages/statue/statue.html
@@ -6,13 +6,18 @@
         <ion-title>
             Statute
         </ion-title>
+      <ion-buttons end>
+        <button class="bookmark" ion-button icon-only>
+          <ion-icon ios="ios-bookmark" md="md-bookmark"></ion-icon>
+        </button>
+      </ion-buttons>
     </ion-navbar>
 </ion-header>
-<ion-content padding id="page13">
+<ion-content padding id="page">
     <h5 id="statue-heading3" style="text-align:center;">
         §1-1 Common law of the State; exceptions
     </h5>
-    <div id="statue-markdown5" class="show-list-numbers-and-dots">
+    <div id="statue-markdown" class="show-list-numbers-and-dots">
         <p>
             §1-1 Common law of the State; exceptions. The common law of England, as ascertained by English and American
             decisions, is declared to be the common law of the State of Hawaii in all cases, except as otherwise
@@ -232,9 +237,6 @@
             H. 104, aff&#39;d 115 F.2d 956; 42
             H. 640; 49 H. 273, 414 P.2d 925. Hawaiian usage in establishing seaward boundaries. 50 H. 314, 440 P.2d 76.
             Hawaiian usage mentioned is usage which predated Nov. 25, 1892. 52 H. 472, 479 P.2d 202.
-        </p>
-        <p>
-            Previous Vol01_Ch0001-0042F Next
         </p>
     </div>
 </ion-content>
