Revert "remove list lines"
This reverts commit 5fb012431068ee3c7eb618926af845acca39bba9.

--- a/client/src/pages/section/section.html
+++ b/client/src/pages/section/section.html
@@ -8,8 +8,8 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="section">
-  <ion-list no-lines id="section-list">
+<ion-content padding id="page12">
+  <ion-list id="section-list10">
     <ion-item color="none" on-click="goToStatue()" id="section-list-item25">
       §1-1 Common law of the State; exceptions
     </ion-item>
