--- a/client/src/pages/search/search.html
+++ b/client/src/pages/search/search.html
@@ -1,5 +1,5 @@
-<ion-content padding>
+<ion-content padding id="page8">
   <form id="search-form">
-    <ion-searchbar class="elastic" placeholder="Search" [showCancelButton]="shouldShowCancel" (ionCancel)="onCancel($event)"></ion-searchbar>
+    <ion-searchbar placeholder="Search" [showCancelButton]="shouldShowCancel" (ionCancel)="onCancel($event)"></ion-searchbar>
   </form>
 </ion-content>
