--- a/client/src/pages/title/title.html
+++ b/client/src/pages/title/title.html
@@ -8,8 +8,8 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="title">
-  <ion-list no-lines id="title-list">
+<ion-content padding id="page10">
+  <ion-list id="title-list8">
     <ion-item color="none" on-click="goToChapter()" id="title-list-item19">
       Title 1 - Government
     </ion-item>
