--- a/client/src/pages/division/division.html
+++ b/client/src/pages/division/division.html
@@ -9,7 +9,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page">
-  <ion-list id="division-list">
+  <ion-list no-lines id="division-list">
     <ion-item color="none" on-click="goToTitle()" id="division-list-item16">
       Division 1 - Government
     </ion-item>
