--- a/client/src/pages/section/section.html
+++ b/client/src/pages/section/section.html
@@ -10,14 +10,32 @@
 </ion-header>
 <ion-content padding id="section">
   <ion-list no-lines id="section-list">
-    <ion-item color="none" on-click="goToStatue()" id="section-list-item25">
-      §1-1 Common law of the State; exceptions
-    </ion-item>
-    <ion-item color="none" id="section-list-item26">
-      §1-2 Common law of the State; exceptions
-    </ion-item>
-    <ion-item color="none" id="section-list-item27">
-      §1-3 Common law of the State; exceptions
-    </ion-item>
+    <ion-grid>
+      <ion-item color="none" id="section-list-item26">
+        <ion-row>
+          <ion-col col-11 class="section_text" on-click="goToStatue()">§1-2 Common law of the State; exceptions
+          </ion-col>
+          <ion-col col-1>
+            <ion-icon name="ios-bookmark-outline"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item color="none" id="section-list-item26">
+        <ion-row>
+          <ion-col col-11 class="section_text">§1-2 Common law of the State; exceptions</ion-col>
+          <ion-col col-1>
+            <ion-icon name="ios-bookmark-outline"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item color="none" id="section-list-item27">
+        <ion-row>
+          <ion-col col-11 class="section_text">§1-3 Common law of the State; exceptions</ion-col>
+          <ion-col col-1>
+            <ion-icon name="ios-bookmark-outline"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+    </ion-grid>
   </ion-list>
 </ion-content>
