statute bookmark footer

--- a/client/src/pages/statue/statue.html
+++ b/client/src/pages/statue/statue.html
@@ -240,3 +240,11 @@
         </p>
     </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-title>
+      <ion-icon name="ios-bookmark-outline"></ion-icon>
+    </ion-title>
+  </ion-toolbar>
+</ion-footer>
