Changed statute footer toolbar color

--- a/client/src/pages/statue/statue.html
+++ b/client/src/pages/statue/statue.html
@@ -242,9 +242,9 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
+  <ion-toolbar id="bottom-toolbar">
     <ion-title>
-      <ion-icon name="ios-bookmark-outline"></ion-icon>
+      <ion-icon name="ios-bookmark-outline" color="dark"></ion-icon>
     </ion-title>
   </ion-toolbar>
 </ion-footer>
