--- a/client/src/pages/statue/statue.html
+++ b/client/src/pages/statue/statue.html
@@ -1,16 +1,11 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar hideBackButton="true">
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
         <ion-title>
             Statute
         </ion-title>
-      <ion-buttons end>
-        <button class="bookmark" ion-button icon-only>
-          <ion-icon ios="ios-bookmark" md="md-bookmark"></ion-icon>
-        </button>
-      </ion-buttons>
     </ion-navbar>
 </ion-header>
 <ion-content padding id="page">
