--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -43,11 +43,12 @@
   <form id="home-form">
     <div id="home-container" text-center>
       <ion-list id="menu-list">
-        <button ion-button icon-left round color="light" class="option-button" on-click="goToDivision()">
+        <div class="spacer"></div>
+        <button ion-button icon-left round outline color="dark" class="option-button" on-click="goToDivision()">
           <ion-grid>
           <ion-row>
             <ion-col col-1>
-              <ion-icon name="md-folder"></ion-icon>
+              <ion-icon name="ios-folder"></ion-icon>
             </ion-col>
             <ion-col>
                 Browse
@@ -55,11 +56,12 @@
           </ion-row>
         </ion-grid>
         </button>
-        <button ion-button icon-left round color="light" class="option-button" on-click="goToLocation()">
+        <div class="spacer"></div>
+        <button ion-button icon-left round outline color="dark" class="option-button" on-click="goToLocation()">
         <ion-grid>
           <ion-row>
             <ion-col col-1>
-              <ion-icon name="md-pin"></ion-icon>
+              <ion-icon name="ios-pin"></ion-icon>
             </ion-col>
             <ion-col>
                 Near You
@@ -67,11 +69,12 @@
           </ion-row>
         </ion-grid>
         </button>
-        <button ion-button icon-left round color="light" class="option-button" on-click="goToCamera()">
+        <div class="spacer"></div>
+        <button ion-button icon-left round outline color="dark" class="option-button" on-click="goToCamera()">
           <ion-grid>
           <ion-row>
             <ion-col col-1>
-              <ion-icon name="md-camera"></ion-icon>
+              <ion-icon name="ios-camera"></ion-icon>
             </ion-col>
             <ion-col>
                 Photograph
@@ -79,11 +82,12 @@
           </ion-row>
         </ion-grid>
         </button>
-        <button ion-button icon-left round color="light" class="option-button" on-click="askForPicture()">
+        <div class="spacer"></div>
+        <button ion-button icon-left round outline color="dark" class="option-button" on-click="askForPicture()">
           <ion-grid>
           <ion-row>
             <ion-col col-1>
-              <ion-icon name="md-image"></ion-icon>
+              <ion-icon name="ios-image"></ion-icon>
             </ion-col>
             <ion-col>
                 Upload
