--- a/client/src/pages/title/title.html
+++ b/client/src/pages/title/title.html
@@ -1,23 +1,17 @@
 <ion-header>
-  <ion-navbar hideBackButton="true">
+  <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Title
+      {{division.name}}
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="title">
   <ion-list no-lines id="title-list">
-    <ion-item color="none" on-click="goToChapter()" id="title-list-item19">
-      Title 1 - Government
-    </ion-item>
-    <ion-item color="none" id="title-list-item20">
-      Title 2 - Business
-    </ion-item>
-    <ion-item color="none" id="title-list-item21">
-      Title - Property; Family
+    <ion-item *ngFor="let tle of division.titles" color="none" (tap)="openTitle(tle)" id="title-list-item19">
+      {{tle.name}}
     </ion-item>
   </ion-list>
 </ion-content>
