--- a/client/src/pages/section/section.html
+++ b/client/src/pages/section/section.html
@@ -1,22 +1,36 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Chapter {{chapter.number}}&nbsp;-&nbsp;{{chapter.text}}
+      Section
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page">
-  <ion-spinner *ngIf="loadingSections"></ion-spinner>
   <ion-list no-lines id="section-list">
     <ion-grid>
-      <ion-item *ngFor="let sec of sections" color="none" id="section-list-item26" (tap)="openSection(sec)">
+      <ion-item color="none" id="section-list-item26">
         <ion-row>
-          <ion-col col-11 class="section_text">
-            {{sec.section_text}}
+          <ion-col col-11 class="section_text" on-click="goToStatue()">§1-2 Common law of the State; exceptions
           </ion-col>
+          <ion-col col-1>
+            <ion-icon name="ios-bookmark-outline"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item color="none" id="section-list-item26">
+        <ion-row>
+          <ion-col col-11 class="section_text">§1-2 Common law of the State; exceptions</ion-col>
+          <ion-col col-1>
+            <ion-icon name="ios-bookmark-outline"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+      <ion-item color="none" id="section-list-item27">
+        <ion-row>
+          <ion-col col-11 class="section_text">§1-3 Common law of the State; exceptions</ion-col>
           <ion-col col-1>
             <ion-icon name="ios-bookmark-outline"></ion-icon>
           </ion-col>
