--- a/client/src/pages/title/title.html
+++ b/client/src/pages/title/title.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -10,6 +10,14 @@
 </ion-header>
 <ion-content padding id="title">
   <ion-list no-lines id="title-list">
+   <ion-row>
+      <ion-col col-1>
+      <ion-icon name="md-arrow-back" (click)="goBack()"></ion-icon>
+      </ion-col>
+      <ion-col col-10>
+        <h5 style="text-align: center; font-weight: normal;"> Titles </h5>
+      </ion-col>
+    </ion-row>
     <ion-item *ngFor="let tle of division.titles" color="none" (tap)="openTitle(tle)" id="title-list-item19">
       {{tle.name}}
     </ion-item>
