added lines to list items

--- a/client/src/pages/division/division.html
+++ b/client/src/pages/division/division.html
@@ -9,7 +9,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page">
-  <ion-list no-lines id="division-list">
+  <ion-list id="division-list">
     <ion-row>
       <ion-col col-1>
       <ion-icon name="md-arrow-back" (click)="goBack()"></ion-icon>
