--- a/client/src/pages/title/title.html
+++ b/client/src/pages/title/title.html
@@ -9,7 +9,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="title">
-  <ion-list no-lines id="title-list">
+  <ion-list id="title-list">
    <ion-row>
       <ion-col col-1>
       <ion-icon name="md-arrow-back" (click)="goBack()"></ion-icon>
