--- a/client/src/pages/bookmarks/bookmarks.html
+++ b/client/src/pages/bookmarks/bookmarks.html
@@ -8,4 +8,19 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page"></ion-content>
+<ion-content padding id="page">
+  <ion-list no-lines id="section-list">
+    <ion-grid>
+      <ion-item *ngFor="let sec of sections" color="none" id="section-list-item26" (tap)="openSection(sec)">
+        <ion-row>
+          <ion-col col-11 class="section_text">
+            &#167;{{sec.chapter}}-{{sec.section}}&nbsp;{{sec.section_text}}
+          </ion-col>
+          <ion-col col-1>
+            <ion-icon name="ios-bookmark-outline"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+    </ion-grid>
+  </ion-list>
+</ion-content>
