change background and symbols

--- a/client/src/pages/section/section.html
+++ b/client/src/pages/section/section.html
@@ -21,7 +21,7 @@
       <ion-item *ngFor="let sec of sections" color="none" id="section-list-item26" (tap)="openSection(sec)">
         <ion-row>
           <ion-col col-11 class="section_text">
-            S{{sec.chapter}}-{{sec.section}}&nbsp;{{sec.section_text}}
+            &#167;{{sec.chapter}}-{{sec.section}}&nbsp;{{sec.section_text}}
           </ion-col>
           <ion-col col-1>
             <ion-icon name="ios-bookmark-outline"></ion-icon>
