--- a/client/src/pages/statue/statue.html
+++ b/client/src/pages/statue/statue.html
@@ -10,7 +10,7 @@
 </ion-header>
 <ion-content padding id="page">
   <h5 id="statue-heading3" style="text-align:center;">
-    S{{section.chapter}}-{{section.section}}&nbsp;{{section.section_text}}
+    &#167;{{section.chapter}}-{{section.section}}&nbsp;{{section.section_text}}
   </h5>
   <div id="statue-markdown" class="show-list-numbers-and-dots">
     <p *ngFor="let txt of section.text">
