menu and back button added to search page

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -31,7 +31,8 @@
       <div class="spacer"></div>
       <div class="spacer"></div>
       <div class="spacer"></div>
-      <ion-searchbar class="search" (change)="goToSearch($event)" [(ngModel)]="searchQuery" [showCancelButton]="shouldShowCancel" (ionCancel)="onCancel($event)">
+      <ion-searchbar class="search" (change)="goToSearch($event)" [(ngModel)]="searchQuery"
+                     [showCancelButton]="shouldShowCancel" (ionCancel)="onCancel($event)">
       </ion-searchbar>
       <div class="spacer"></div>
       <div class="spacer"></div>
