--- a/client/src/pages/search/search.html
+++ b/client/src/pages/search/search.html
@@ -1,3 +1,13 @@
+<ion-header>
+  <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+      Search
+    </ion-title>
+  </ion-navbar>
+</ion-header>
 <ion-content padding id="page8">
   <form id="search-form">
     <ion-searchbar placeholder={{query}} [showCancelButton]="shouldShowCancel" (ionCancel)="onCancel($event)"></ion-searchbar>
