--- a/client/src/pages/section/section.html
+++ b/client/src/pages/section/section.html
@@ -12,21 +12,22 @@
   <ion-list id="section-list">
     <ion-row>
       <ion-col col-1>
-      <ion-icon name="md-arrow-back" (click)="goBack()"></ion-icon>
+        <ion-icon name="md-arrow-back" (click)="goBack()"></ion-icon>
       </ion-col>
       <ion-col col-10>
         <h5 style="text-align: center; font-weight: normal;"> Sections </h5>
       </ion-col>
     </ion-row>
-      <ion-item *ngFor="let sec of sections" color="none" id="section-list-item26" (tap)="openSection(sec)">
-        <ion-row>
-          <ion-col col-11 class="section_text">
-            &#167;{{sec.chapter}}-{{sec.section}}&nbsp;{{sec.section_text}}
-          </ion-col>
-          <ion-col col-1>
-            <ion-icon name="ios-bookmark-outline"></ion-icon>
-          </ion-col>
-        </ion-row>
-      </ion-item>
+    <ion-item *ngFor="let sec of sections;let idx=index" color="none" id="section-list-item26" (tap)="openSection(sec,idx)">
+      <ion-row>
+        <ion-col col-11 class="section_text">
+          &#167;{{sec.chapter}}-{{sec.section}}&nbsp;{{sec.section_text}}
+        </ion-col>
+        <ion-col col-1>
+          <ion-icon name="ios-bookmark-outline" *ngIf="!sec.bookmarked"></ion-icon>
+          <ion-icon name="ios-bookmark" style="color:#454545;" *ngIf="sec.bookmarked"></ion-icon>
+        </ion-col>
+      </ion-row>
+    </ion-item>
   </ion-list>
 </ion-content>
