--- a/client/src/pages/statue/statue.html
+++ b/client/src/pages/statue/statue.html
@@ -20,9 +20,15 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar id="bottom-toolbar">
+    <div style="float:left;font-size:22px;" (tap)="movePrev()">
+      <ion-icon name="arrow-dropleft"></ion-icon>
+    </div>
     <ion-title>
-      <ion-icon name="ios-bookmark-outline" color="dark" *ngIf="!bookmarked" (tap)="addToBookmark()"></ion-icon>
-      <ion-icon name="ios-bookmark-outline" color="dark" *ngIf="bookmarked" (tap)="removeFromBookmark()"></ion-icon>
+      <ion-icon name="ios-bookmark-outline" color="dark" *ngIf="!section.bookmarked" (tap)="addToBookmark()"></ion-icon>
+      <ion-icon name="ios-bookmark" color="dark" style="color:#454545;" *ngIf="section.bookmarked" (tap)="removeFromBookmark()"></ion-icon>
     </ion-title>
+    <div style="float:right;font-size:22px;">
+      <ion-icon name="arrow-dropright" (tap)="moveNext()"></ion-icon>
+    </div>
   </ion-toolbar>
 </ion-footer>
