--- a/client/src/pages/statue/statue.html
+++ b/client/src/pages/statue/statue.html
@@ -11,14 +11,14 @@
 <ion-content padding id="page">
   <ion-row>
     <ion-col col-1>
-        <ion-icon name="md-arrow-back" (click)="goBack()"></ion-icon>
+      <ion-icon name="md-arrow-back" (click)="goBack()"></ion-icon>
     </ion-col>
     <ion-col col-10 style="text-align: center;">
-     <b> &#167;{{section.chapter}}-{{section.section}}&nbsp;{{section.section_text}} </b>
+      <b> &#167;{{section.chapter}}-{{section.section}}&nbsp;{{section.section_text}} </b>
     </ion-col>
   </ion-row>
   <div id="statue-markdown" class="show-list-numbers-and-dots">
-    <p *ngFor="let txt of section.text">
+    <p *ngFor="let txt of section.text" [innerHTML]="sanitize(txt)">
       {{txt}}
     </p>
   </div>
@@ -42,8 +42,8 @@
           <button style="background-color: white; float: right;" icon-only (tap)="moveNext()">
             <ion-icon name="ios-arrow-forward"></ion-icon>
           </button>
-      </ion-col>
-    </ion-row>
+        </ion-col>
+      </ion-row>
     </ion-grid>
   </ion-toolbar>
 </ion-footer>
