--- a/client/src/pages/search/search.html
+++ b/client/src/pages/search/search.html
@@ -10,7 +10,7 @@
 </ion-header>
 <ion-content padding id="page8">
   <ion-searchbar placeholder={{query}} [showCancelButton]="shouldShowCancel"
-                 (ionCancel)="onCancel($event)" (change)="goToSearch($event)"
+                 (ionCancel)="onCancel($event)" (ionChange)="goToSearch($event)"
                  [(ngModel)]="query"></ion-searchbar>
 
   <ion-list no-lines id="section-list">
