--- a/client/src/pages/search/search.html
+++ b/client/src/pages/search/search.html
@@ -16,13 +16,14 @@
   <ion-list no-lines id="section-list">
     <ion-grid>
       <ion-item *ngFor="let sec of sections;let idx=index;" color="none" id="section-list-item26"
-                (tap)="openSection(sec, sec._id,idx)" attr.id={{sec._id}}>
+                attr.id={{sec._id}} (tap)="openSection(sec, sec._id,idx)">
         <ion-row>
           <ion-col col-11 class="section_text">
             S{{sec._source.chapter}}-{{sec._source.section}}&nbsp;{{sec._source.section_text}}
           </ion-col>
           <ion-col col-1>
-            <ion-icon name="ios-bookmark-outline"></ion-icon>
+            <ion-icon name="ios-bookmark-outline" *ngIf="!sec.bookmarked"></ion-icon>
+            <ion-icon name="ios-bookmark" style="color:#454545;" *ngIf="sec.bookmarked"></ion-icon>
           </ion-col>
         </ion-row>
       </ion-item>
