--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -1,76 +1,91 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-grid>
-      <ion-row>
-        <ion-col col-1>
-          <button ion-button menuToggle>
-            <ion-icon name="menu"></ion-icon>
-          </button>
-        </ion-col>
-        <ion-col col-10>
-          <ion-title>
-            <div id="hrs-title">HRS</div>
-          </ion-title>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col text-center>
-        <div id="hrs-subtitle"> Hawaii Revised Statutes </div>
-        </ion-col>
-      </ion-row>
-      <div class="spacer"></div>
-      <div class="spacer"></div>
-      <div class="spacer"></div>
-      <ion-searchbar class="search" (change)="goToSearch($event)" [(ngModel)]="searchQuery"
-                     [showCancelButton]="shouldShowCancel" (ionCancel)="onCancel($event)">
-      </ion-searchbar>
-      <div class="spacer"></div>
-      <div class="spacer"></div>
-      <div class="spacer"></div>
-    </ion-grid>
-  </ion-toolbar>
-</ion-header>
-<ion-content class="home" padding id="page1">
-  <form id="home-form">
-    <div id="home-container" text-center>
-      <ion-list id="menu-list">
-        <button ion-button icon-left round color="light" class="option-button" on-click="goToDivision()">
-          <ion-grid>
-          <ion-row>
-            <ion-col col-1>
-              <ion-icon name="md-folder"></ion-icon>
-            </ion-col>
-            <ion-col col-10>
-                Browse
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-        </button>
-        <button ion-button icon-left round color="light" class="option-button" on-click="goToLocation()">
-        <ion-grid>
-          <ion-row>
-            <ion-col col-1>
-              <ion-icon name="md-pin"></ion-icon>
-            </ion-col>
-            <ion-col col-10>
-                Near You
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-        </button>
-        <button ion-button icon-left round color="light" class="option-button" on-click="goToCamera()">
-          <ion-grid>
-          <ion-row>
-            <ion-col col-1>
-              <ion-icon name="md-camera"></ion-icon>
-            </ion-col>
-            <ion-col col-10>
-                Photograph
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-        </button>
-      </ion-list>
+<ion-grid>
+
+  <ion-row>
+    <ion-col text-right>
+    <button style="background: transparent;" icon-only ion-button menuToggle>
+      <ion-icon style="color: white;" name="menu"></ion-icon>
+    </button>
+  </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col text-center>
+      <ion-title> 
+        HRS 
+        <p class="subtitle"> Hawaii Revised Statutes </p>
+      </ion-title>
+    </ion-col>
+  </ion-row>
+
+  <ion-row> 
+    <ion-col>
+      <ion-item style="background: transparent;">
+        <ion-label style="color: white;" floating>Search</ion-label>
+        <ion-input class="search" style="color: white;" type="search" (change)="goToSearch($event)" [(ngModel)]="searchQuery" (ionCancel)="onCancel($event)"></ion-input>
+        <ion-icon class="input-icons" style="color: white; margin-bottom: -5%;" item-end name="md-search"></ion-icon>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+
+
+  <div style="position: absolute; bottom: 5%; right: 2%; width: 100%">
+    <div style="text-align: center">
+  <ion-row> 
+    <ion-col>
+      <ion-item style="background: transparent;" on-click="goToDivision()">
+        <ion-row>
+          <ion-col col-1 text-center>
+            <ion-icon class="input-icons" style="color: white;" name="md-folder"></ion-icon>
+          </ion-col>
+          <ion-col col-10 text-left>
+            <p style="color: white;"> Browse </p>
+          </ion-col>
+          <ion-col text-right>
+            <ion-icon style="color: white;" name="ios-arrow-forward"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+
+  <ion-row> 
+    <ion-col>
+      <ion-item style="background: transparent;" on-click="goToCamera()">
+        <ion-row>
+          <ion-col col-1 text-center>
+            <ion-icon class="input-icons" style="color: white;" name="md-camera"></ion-icon>
+          </ion-col>
+          <ion-col col-10 text-left>
+            <p style="color: white;"> Take a Picture </p>
+          </ion-col>
+          <ion-col text-right>
+            <ion-icon style="color: white;" name="ios-arrow-forward"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+
+
+
+  <ion-row> 
+    <ion-col>
+      <ion-item style="background: transparent;" on-click="goToLocation()">
+        <ion-row>
+          <ion-col col-1 text-center>
+            <ion-icon class="input-icons" style="color: white;" name="md-pin"></ion-icon>
+          </ion-col>
+          <ion-col col-10 text-left>
+            <p style="color: white;"> Near You </p>
+          </ion-col>
+          <ion-col text-right>
+            <ion-icon style="color: white;" name="ios-arrow-forward"></ion-icon>
+          </ion-col>
+        </ion-row>
+      </ion-item>
+    </ion-col>
+  </ion-row>
+  
     </div>
-  </form>
-</ion-content>
+  </div>
+</ion-grid>
