Updated header on every page

--- a/client/src/pages/help/help.html
+++ b/client/src/pages/help/help.html
@@ -1,11 +1,13 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <ion-title>
+        Help
+      </ion-title>
+    <ion-buttons end>
+    <button style="background: transparent;" icon-only ion-button menuToggle>
+      <ion-icon style="color: white;" name="menu"></ion-icon>
     </button>
-    <ion-title>
-      Help
-    </ion-title>
+  </ion-buttons>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page6"></ion-content>
