--- a/client/src/pages/location/location.html
+++ b/client/src/pages/location/location.html
@@ -1,13 +1,16 @@
 <ion-header>
-  <ion-navbar hideBackButton="true">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+  <ion-navbar>
+      <ion-title>
+        Location
+      </ion-title>
+    <ion-buttons end>
+    <button style="background: transparent;" icon-only ion-button menuToggle>
+      <ion-icon style="color: white;" name="menu"></ion-icon>
     </button>
-    <ion-title>
-      Laws Near You
-    </ion-title>
+  </ion-buttons>
   </ion-navbar>
 </ion-header>
+
 <ion-content padding id="page12">
   <ion-list id="section-list10">
     <ion-item color="none" on-click="goToStatue()" id="section-list-item25">
