--- a/client/src/pages/bookmarks/bookmarks.html
+++ b/client/src/pages/bookmarks/bookmarks.html
@@ -1,13 +1,12 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
+  <ion-toolbar no-border-top text-center>
+    <ion-title > Bookmarks </ion-title>
+    <button  ion-button menuToggle right>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>
-      Bookmarks
-    </ion-title>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
+
 <ion-content padding id="page">
   <ion-list no-lines id="section-list">
     <ion-grid>
