--- a/client/src/pages/link-statue/link-statue.html
+++ b/client/src/pages/link-statue/link-statue.html
@@ -1,13 +1,16 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <ion-title>
+        {{section.title_text}}
+      </ion-title>
+    <ion-buttons end>
+    <button style="background: transparent;" icon-only ion-button menuToggle>
+      <ion-icon style="color: white;" name="menu"></ion-icon>
     </button>
-    <ion-title>
-      {{section.title_text}}
-    </ion-title>
+  </ion-buttons>
   </ion-navbar>
 </ion-header>
+
 <ion-content padding id="page">
   <h5 id="statue-heading3" style="text-align:center;">
     &#167;{{section.chapter}}-{{section.section}}&nbsp;{{section.section_text}}
