--- a/client/src/pages/section/section.html
+++ b/client/src/pages/section/section.html
@@ -1,20 +1,20 @@
 <ion-header>
-  <ion-navbar hideBackButton="true">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+  <ion-navbar>
+      <ion-title>
+        Chapter {{chapter.number}}&nbsp;-&nbsp;{{chapter.text}}
+      </ion-title>
+    <ion-buttons end>
+    <button style="background: transparent;" icon-only ion-button menuToggle>
+      <ion-icon style="color: white;" name="menu"></ion-icon>
     </button>
-    <ion-title>
-      Chapter {{chapter.number}}&nbsp;-&nbsp;{{chapter.text}}
-    </ion-title>
+  </ion-buttons>
   </ion-navbar>
 </ion-header>
+
 <ion-content padding id="page">
   <ion-list id="section-list">
     <ion-row>
-      <ion-col col-1>
-        <ion-icon name="md-arrow-back" (click)="goBack()"></ion-icon>
-      </ion-col>
-      <ion-col col-10>
+      <ion-col text-center>
         <h5 style="text-align: center; font-weight: normal;"> Sections </h5>
       </ion-col>
     </ion-row>
