Primary text color change. Aligned title on help, settings. Seal loads correctly

--- a/client/src/pages/help/help.html
+++ b/client/src/pages/help/help.html
@@ -1,13 +1,10 @@
 <ion-header>
-  <ion-navbar>
-      <ion-title>
-        Help
-      </ion-title>
-    <ion-buttons end>
-    <button style="background: transparent;" icon-only ion-button menuToggle>
-      <ion-icon style="color: white;" name="menu"></ion-icon>
+  <ion-toolbar no-border-top text-center>
+    <ion-title > Help </ion-title>
+    <button  ion-button menuToggle right>
+      <ion-icon name="menu"></ion-icon>
     </button>
-  </ion-buttons>
-  </ion-navbar>
+  </ion-toolbar>
 </ion-header>
+
 <ion-content padding id="page6"></ion-content>
