--- a/client/src/pages/settings/settings.html
+++ b/client/src/pages/settings/settings.html
@@ -1,13 +1,12 @@
 <ion-header>
-    <ion-navbar>
-        <button ion-button menuToggle>
-            <ion-icon name="menu"></ion-icon>
-        </button>
-        <ion-title>
-            Settings
-        </ion-title>
-    </ion-navbar>
+  <ion-toolbar no-border-top text-center>
+    <ion-title > Settings </ion-title>
+    <button  ion-button menuToggle right>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+  </ion-toolbar>
 </ion-header>
+
 <ion-content padding>
     <ion-list>
         <ion-item>
