--- a/client/src/pages/search/search.html
+++ b/client/src/pages/search/search.html
@@ -24,7 +24,7 @@
                 attr.id={{sec._id}} (tap)="openSection(sec, sec._id,idx)">
         <ion-row>
           <ion-col col-11 class="section_text">
-            S{{sec._source.chapter}}-{{sec._source.section}}&nbsp;{{sec._source.section_text}}
+            &#167;{{sec._source.chapter}}-{{sec._source.section}}&nbsp;{{sec._source.section_text}}
           </ion-col>
           <ion-col col-1>
             <ion-icon name="ios-bookmark-outline" *ngIf="!sec.bookmarked"></ion-icon>
