--- a/client/src/pages/section/section.html
+++ b/client/src/pages/section/section.html
@@ -20,7 +20,7 @@
     </ion-row>
     <ion-item *ngFor="let sec of sections;let idx=index" color="none" id="section-list-item26" (tap)="openSection(sec,idx)">
       <ion-row>
-        <ion-col col-11 class="section_text">
+        <ion-col *ngIf="hasSections" col-11 class="section_text">
           &#167;{{sec.chapter}}-{{sec.section}}&nbsp;{{sec.section_text}}
         </ion-col>
         <ion-col col-1>
@@ -29,5 +29,11 @@
         </ion-col>
       </ion-row>
     </ion-item>
+    <p *ngIf="!hasSections">
+      There are no corresponding sections because chapter {{chapter.number}} has been repealed.
+    </p>
+    <p *ngIf="loadingSections" style="text-align: center;">
+      Loading Sections...
+    </p>
   </ion-list>
 </ion-content>
