--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -19,9 +19,9 @@
 
   <ion-row> 
     <ion-col>
-      <ion-item style="background: transparent;">
+      <ion-item style="background: transparent; border-bottom-color: white">
         <ion-label style="color: white;" floating>Search</ion-label>
-        <ion-input class="search" style="color: white;" type="search" (change)="goToSearch($event)" [(ngModel)]="searchQuery" (ionCancel)="onCancel($event)"></ion-input>
+        <ion-input class="search" style="color: white; border-bottom-color: white" type="search" (change)="goToSearch($event)" [(ngModel)]="searchQuery" (ionCancel)="onCancel($event)"></ion-input>
         <ion-icon class="input-icons" style="color: white; margin-bottom: -5%;" item-end name="md-search"></ion-icon>
       </ion-item>
     </ion-col>
