--- a/client/src/pages/help/help.html
+++ b/client/src/pages/help/help.html
@@ -10,7 +10,7 @@
 
 <ion-content padding id="page6">
 	<h5 style="text-align: center;"> What can I search? </h5>
-	<p> Our search feature is quipped with ElasticSearch, which will intelligently inverted index all our data. In other words, you can search anything and we will provide relevant information! </p>
+	<p> Our search feature is equipped with Elasticsearch, which applies an inverted index on all our data. In other words, when you search, we return the best results! </p>
 
 	<h5 style="text-align: center;"> What is this "Take a Picture" feature? </h5>
 	<p> Simply take a picture of a sign like this one: </p>
